--- a/rule.conf
+++ b/rule.conf
@@ -490,7 +490,7 @@ USER-AGENT,*Spotify*,PROXY
 HOST-SUFFIX,scdn.co,PROXY,resolve-on-proxy
 HOST-SUFFIX,spoti.fi,PROXY,resolve-on-proxy
 HOST-SUFFIX,spotify.com,PROXY,resolve-on-proxy
-FINAL,DIRECT
+FINAL,DXY
 
 [GLOBAL]
 SELECTED,DOSG
