--- a/rule.conf
+++ b/rule.conf
@@ -1,7 +1,7 @@
 # 20181104_121915
 
 [SERVER]
-DOSG = shadowsocks, 128.199.104.81, 80, chacha20, "qwe123", group=馃嚫馃嚞 DOSG, upstream-proxy=false, upstream-proxy-auth=false
+DOSG = shadowsocks, 128.199.104.81, 80, chacha20, "qwe123", upstream-proxy=false, upstream-proxy-auth=false
 DXY = vmess, 153.36.242.114, 80, aes-128-cfb, "a4162cf2-a2ff-44be-b924-82bc8fe8382c", over-tls=false, certificate=1, obfs=http, obfs-header="Host: elife.icbc.com.cn[Rr][Nn]User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 12_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/16B92"
 DXYFQ = vmess, 47.75.56.153, 80, aes-128-cfb, "a4162cf2-a2ff-44be-b924-82bc8fe8382c", over-tls=false, certificate=1, obfs=http, obfs-header="Host: elife.icbc.com.cn[Rr][Nn]User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 12_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/16B92"
 
